package com.directi.training.ocp.exercise_refactored;

public class SpaceSlotResource implements Resource {
    @Override
    public int allocate() {
    }

    @Override
    public void free(int resourceId) {
    }

    @Override
    public void markBusy(int resourceId) {
    }

    @Override
    public void markFree(int resourceId) {
    }
}
